<resources>
    <string name="app_name">AppListaCurso</string>
    <string name="txt_titulo">Aplicativo Lista Curso</string>
    <string name="txt_hint_primeiro_nome">Primeiro Nome</string>
    <string name="txt_hint_sobrenome">Sobrenome</string>
    <string name="txt_hint_curso_desejado">Curso Desejado</string>
    <string name="txt_hint_telefone_contato">Telefone de Contato</string>
    <string name="txt_btn_limpar">Limpar</string>
    <string name="txt_btn_salvar">Salvar</string>
    <string name="txt_btn_finalizar">Finalizar</string>
</resources>